fix: hide scrollbar on table wrapper #56

--- a/src/components/hardware-table.css
+++ b/src/components/hardware-table.css
@@ -22,3 +22,12 @@
 	transition-property: background-color;
 	background-color: rgba(255, 255, 255, 0.5);
 }
+
+.ant-table-wrapper::-webkit-scrollbar {
+	display: none;
+}
+
+.ant-table-wrapper {
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+}
